feat: Phase 1バックエンド実装完了 - FastAPI + GraphQL API, LLM統合, テスト環境, 再発防止策追加

--- a/.env.sample
+++ b/.env.sample
@@ -1,31 +1,57 @@
-# === 開発環境設定 ===
-ENV=development
-LOG_LEVEL=DEBUG
+# ========================================
+# QRAI MVP API 環境変数設定
+# ========================================
 
-# === LLM プロバイダー設定 ===
-LLM_PRIMARY_PROVIDER=openrouter
-LLM_FALLBACK_PROVIDERS=google_ai
+# === アプリケーション基本設定 ===
+QRAI_APP_NAME="QRAI MVP API"
+QRAI_VERSION="1.0.0"
+QRAI_DEBUG=true
 
-# === API キー（OpenRouterとGoogle AIのみ使用） ===
-OPENROUTER_API_KEY=
-GOOGLE_AI_API_KEY=
+# === データベース設定 ===
+# pragma: allowlist secret
+QRAI_DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/qrai_dev  # pragma: allowlist secret
 
-# Azure OpenAI（現在使用不可）
+# === LLM Provider設定 ===
+# OpenRouter (プライマリプロバイダー)
+QRAI_OPENROUTER_API_KEY=あなたのOpenRouterAPIキー  # pragma: allowlist secret
+QRAI_OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+
+# Google AI Studio (フォールバックプロバイダー)
+QRAI_GOOGLE_AI_API_KEY=あなたのGoogleAIAPIキー  # pragma: allowlist secret
+QRAI_GOOGLE_AI_MODEL=gemini-pro
+
+# === Azure AI Search設定 (Phase 2以降) ===
+QRAI_AZURE_SEARCH_ENDPOINT=""
+QRAI_AZURE_SEARCH_KEY=""
+QRAI_AZURE_SEARCH_INDEX="qrai-index"
+
+# === レート制限設定 ===
+QRAI_RATE_LIMIT_REQUESTS=20
+QRAI_RATE_LIMIT_WINDOW=60
+
+# === CORS設定 ===
+QRAI_CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# === ログ設定 ===
+QRAI_LOG_LEVEL=DEBUG
+
+# ========================================
+# 以下は現在未使用（将来用）
+# ========================================
+
+# === 開発環境設定（未使用） ===
+# ENV=development
+# LLM_PRIMARY_PROVIDER=openrouter
+# LLM_FALLBACK_PROVIDERS=google_ai
+
+# === Azure OpenAI（現在使用不可） ===
 # AZURE_OPENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # AZURE_OPENAI_ENDPOINT=https://your-openai.openai.azure.com
 
-# === Azure Search設定（開発環境では無効化） ===
-# AZURE_SEARCH_ENDPOINT=disabled-in-dev
-# AZURE_SEARCH_API_KEY=disabled-in-dev
-
-# === データベース設定（開発環境はSQLite） ===
-DATABASE_URL=sqlite:///./dev.db
-TEST_DATABASE_URL=sqlite:///./test.db
-
-# === Redis設定 ===
-REDIS_URL=redis://localhost:6379
+# === Redis設定（未実装） ===
+# REDIS_URL=redis://localhost:6379
 
 # === Azure設定（デプロイ後に設定） ===
-AZURE_RESOURCE_GROUP=qrai-rg-dev
-AZURE_LOCATION=japaneast
+# AZURE_RESOURCE_GROUP=qrai-rg-dev
+# AZURE_LOCATION=japaneast
 # AZURE_KEYVAULT_NAME=デプロイ後に設定
