--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,30 @@
-# Web Framework
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+# FastAPI core dependencies
+fastapi~=0.104.1
+uvicorn[standard]~=0.24.0
 
 # GraphQL
-strawberry-graphql[fastapi]==0.216.1
+strawberry-graphql~=0.215.1
 
 # Database
-sqlalchemy[asyncio]==2.0.23
-alembic==1.12.1
-aiosqlite==0.19.0
+sqlalchemy~=2.0.23
+alembic~=1.13.0
+aiosqlite~=0.19.0
 
-# HTTP Client
-httpx==0.25.2
+# HTTP client
+httpx~=0.25.2
 
 # Configuration
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic~=2.5.0
+pydantic-settings~=2.1.0
 
 # Logging
-structlog==23.2.0
+structlog~=23.2.0
 
-# Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-pytest-mock==3.12.0
+# Testing (development)
+pytest~=7.4.3
+pytest-cov~=4.1.0
+pytest-asyncio~=0.21.1
+pytest-mock~=3.12.0
 
 # Development
 black==23.11.0
