feat(phase-1.5B): Complete database production readiness - PostgreSQL integration, Alembic automation, connection pooling, backup strategy

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,10 @@ sqlalchemy~=2.0.23
 alembic~=1.13.0
 aiosqlite~=0.19.0
 
+# PostgreSQL support
+asyncpg~=0.29.0
+psycopg2-binary~=2.9.7
+
 # HTTP client
 httpx~=0.25.2
 
