--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -2,14 +2,11 @@
 
 [alembic]
 # path to migration scripts
-# Use forward slashes (/) also on windows to provide an os agnostic path
-script_location = alembic
+script_location = migrations
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
 # Uncomment the line below if you want the files to be prepended with date and time
-# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
-# for all available tokens
-# file_template = %%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s
+file_template = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s_%%(slug)s
 
 # sys.path path, will be prepended to sys.path if present.
 # defaults to the current working directory.
@@ -17,13 +14,12 @@ prepend_sys_path = .
 
 # timezone to use when rendering the date within the migration file
 # as well as the filename.
-# If specified, requires the python>=3.9 or backports.zoneinfo library.
-# Any required deps can installed by adding `alembic[tz]` to the pip requirements
-# string value is passed to ZoneInfo()
-# leave blank for localtime
+# If specified, requires the python>=3.9 or backports.zoneinfo library that is
+# installed by default with Python >= 3.9
 # timezone =
 
-# max length of characters to apply to the "slug" field
+# max length of characters to apply to the
+# "slug" field
 # truncate_slug_length = 40
 
 # set to 'true' to run the environment during
@@ -34,6 +30,15 @@ prepend_sys_path = .
 # a source .py file to be detected as revisions in the
 # versions/ directory
 # sourceless = false
+
+# version number format; supported values include:
+# - %%(rev)s : revision ID
+# - %%(year)d : four-digit year
+# - %%(month).2d : zero-padded month
+# - %%(day).2d : zero-padded day
+# - %%(hour).2d : zero-padded hour
+# - %%(minute).2d : zero-padded minute
+version_num_format = %%(year)d%%(month).2d%%(day).2d_%%(hour).2d%%(minute).2d_%%(rev)s
 
 # version location specification; This defaults
 # to migrations/versions.  When using multiple version
@@ -49,8 +54,7 @@ prepend_sys_path = .
 # version_path_separator = :
 # version_path_separator = ;
 # version_path_separator = space
-# version_path_separator = newline
-version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
+version_path_separator = os
 
 # set to 'true' to search source files recursively
 # in each "version_locations" directory
@@ -61,9 +65,9 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# pragma: allowlist secret
-sqlalchemy.url = driver://user:pass@localhost/dbname  # pragma: allowlist secret
-
+# Dynamically set from environment variable
+# sqlalchemy.url = driver://user:pass@localhost/dbname  # pragma: allowlist secret
+sqlalchemy.url =
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
@@ -71,16 +75,15 @@ sqlalchemy.url = driver://user:pass@localhost/dbname  # pragma: allowlist secret
 # detail and examples
 
 # format using "black" - use the console_scripts runner, against the "black" entrypoint
-# hooks = black
-# black.type = console_scripts
-# black.entrypoint = black
-# black.options = -l 79 REVISION_SCRIPT_FILENAME
+hooks = black
+black.type = console_scripts
+black.entrypoint = black
+black.options = -l 88 REVISION_SCRIPT_FILENAME
 
-# lint with attempts to fix using "ruff" - use the exec runner, execute a binary
-# hooks = ruff
-# ruff.type = exec
-# ruff.executable = %(here)s/.venv/bin/ruff
-# ruff.options = --fix REVISION_SCRIPT_FILENAME
+# lint with ruff - Uncomment the below if you want to use ruff to lint your migration files
+# ruff.type = console_scripts
+# ruff.entrypoint = ruff
+# ruff.options = check --fix REVISION_SCRIPT_FILENAME
 
 # Logging configuration
 [loggers]
