--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
       target: development
+    container_name: qrai_backend
     ports:
       - "8000:8000"
     environment:
@@ -17,15 +18,15 @@ services:
       - PYTHONUNBUFFERED=1
 
       # Database (開発用はSQLite)
-      - QRAI_DATABASE_URL=sqlite+aiosqlite:///./test.db
+      - DATABASE_URL=postgresql+asyncpg://qrai_user:dev_password@postgres:5432/qrai_dev
 
       # LLM Provider設定（環境変数から取得）
       - QRAI_LLM_PRIMARY_PROVIDER=${LLM_PRIMARY_PROVIDER:-openrouter}
       - QRAI_LLM_FALLBACK_PROVIDERS=${LLM_FALLBACK_PROVIDERS:-google_ai,azure_openai}
 
       # Key Vault（開発環境では直接環境変数）
-      - QRAI_OPENROUTER_API_KEY=${OPENROUTER_API_KEY:-}
-      - QRAI_GOOGLE_AI_API_KEY=${GOOGLE_AI_API_KEY:-}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
+      - GOOGLE_AI_API_KEY=${GOOGLE_AI_API_KEY}
       - QRAI_AZURE_OPENAI_API_KEY=${AZURE_OPENAI_API_KEY:-}
       - QRAI_AZURE_OPENAI_ENDPOINT=${AZURE_OPENAI_ENDPOINT:-}
 
@@ -36,6 +37,10 @@ services:
     volumes:
       - ./backend:/app
       - backend_cache:/root/.cache
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
@@ -76,20 +81,23 @@ services:
   # PostgreSQL (本番環境のCosmos DB代替)
   postgres:
     image: postgres:15-alpine
+    container_name: qrai_postgres
     environment:
-      - POSTGRES_DB=qrai_dev
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      POSTGRES_DB: qrai_dev
+      POSTGRES_USER: qrai_user
+      POSTGRES_PASSWORD: dev_password  # pragma: allowlist secret
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=ja_JP.UTF-8"
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./scripts/init_postgres.sql:/docker-entrypoint-initdb.d/01_init.sql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: ["CMD-SHELL", "pg_isready -U qrai_user -d qrai_dev"]
       interval: 10s
       timeout: 5s
       retries: 5
+    restart: unless-stopped
     networks:
       - qrai-network
 
