--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,39 @@
-name: 🧪 Application CI/CD Pipeline
+name: 🧪 QRAI CI/CD Pipeline - Phase 1.5 Production Ready
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, develop, feature/*]
     paths-ignore: ['infra/**', 'docs/**', '*.md']
   pull_request:
-    branches: [main]
+    branches: [main, develop]
     paths-ignore: ['infra/**', 'docs/**', '*.md']
 
 env:
   NODE_VERSION: '20'
   PYTHON_VERSION: '3.12'
+  POSTGRES_VERSION: '16'
 
 jobs:
-  # Phase 0: 基盤検証のみ
-  validate-structure:
-    name: 📋 Phase 0 - Project Structure Validation
+  # Phase 1: 基盤検証・セットアップ
+  setup-validation:
+    name: 🏗️ Setup & Validation
     runs-on: ubuntu-latest
+    outputs:
+      cache-key: ${{ steps.cache-key.outputs.key }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Generate cache key
+        id: cache-key
+        run: |
+          echo "key=deps-${{ hashFiles('backend/requirements.txt', 'frontend/package.json', 'frontend/pnpm-lock.yaml') }}" >> $GITHUB_OUTPUT
 
       - name: Validate project structure
         run: |
-          echo "🔍 Phase 0 プロジェクト構造検証"
+          echo "🔍 Phase 1.5 プロジェクト構造検証"
 
           # 必須ファイルの存在確認
           echo "📁 必須ファイル確認:"
@@ -31,33 +41,22 @@ jobs:
           test -f docker-compose.test.yml && echo "✅ docker-compose.test.yml"
           test -f .pre-commit-config.yaml && echo "✅ .pre-commit-config.yaml"
           test -f .secrets.baseline && echo "✅ .secrets.baseline"
-          test -f backend/scripts/init.sql && echo "✅ backend/scripts/init.sql"
+          test -f backend/requirements.txt && echo "✅ backend/requirements.txt"
+          test -f backend/alembic.ini && echo "✅ backend/alembic.ini"
+          test -f frontend/package.json && echo "✅ frontend/package.json"
 
-          echo "✅ Phase 0 構造検証完了"
+          # Phase 1.5 必須ディレクトリ確認
+          test -d backend/tests && echo "✅ backend/tests/"
+          test -d backend/migrations && echo "✅ backend/migrations/"
+          test -d scripts && echo "✅ scripts/"
 
-  docker-validation:
-    name: 🐳 Docker Environment Validation
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+          echo "✅ Phase 1.5 構造検証完了"
 
-      - name: Test Docker Compose configuration
-        run: |
-          echo "🐳 Docker Compose設定検証"
-
-          # Compose ファイルの文法チェック
-          docker compose -f docker-compose.yml config > /dev/null
-          echo "✅ docker-compose.yml 文法OK"
-
-          docker compose -f docker-compose.test.yml config > /dev/null
-          echo "✅ docker-compose.test.yml 文法OK"
-
-          echo "✅ Docker設定検証完了"
-
+  # Phase 2: セキュリティスキャン
   security-scan:
     name: 🛡️ Security Scan
     runs-on: ubuntu-latest
+    needs: setup-validation
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -67,59 +66,251 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: Install detect-secrets
+      - name: Install security tools
         run: |
-          pip install detect-secrets
+          pip install detect-secrets safety bandit pip-audit
 
       - name: Run secrets detection
         run: |
           echo "🔍 機密情報スキャン実行"
-
-          # ベースラインファイルの存在確認
-          if [ ! -f .secrets.baseline ]; then
-            echo "❌ .secrets.baseline ファイルが見つかりません"
-            exit 1
-          fi
-
-          # detect-secretsスキャン実行（Pythonモジュールとして）
-          echo "📁 現在のディレクトリ: $(pwd)"
-          echo "📂 ベースラインファイル: $(ls -la .secrets.baseline)"
-
           python -m detect_secrets scan --baseline .secrets.baseline
           echo "✅ 機密情報スキャン完了"
 
-      - name: Validate pre-commit config
+      - name: Run dependency vulnerability scan
         run: |
-          echo "🔍 pre-commit設定検証"
-          pip install pre-commit
-          pre-commit validate-config
-          echo "✅ pre-commit設定検証完了"
+          echo "🔍 依存関係脆弱性スキャン実行"
+          cd backend
+          pip-audit --desc --format=json --output=vulnerability-report.json || true
+          if [ -f vulnerability-report.json ]; then
+            echo "📊 脆弱性レポート生成完了"
+          fi
+          echo "✅ 依存関係スキャン完了"
 
+      - name: Run SAST security scan
+        run: |
+          echo "🔍 SAST セキュリティスキャン実行"
+          cd backend
+          bandit -r . -f json -o bandit-report.json -ll || true
+          echo "✅ SAST スキャン完了"
+
+      - name: Upload security reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: security-reports
+          path: |
+            backend/vulnerability-report.json
+            backend/bandit-report.json
+          retention-days: 30
+
+  # Phase 3: Backend 品質・テスト
+  backend-quality:
+    name: 🐍 Backend Quality & Testing
+    runs-on: ubuntu-latest
+    needs: setup-validation
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_DB: test_qrai
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password  # pragma: allowlist secret
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: 'pip'
+          cache-dependency-path: 'backend/requirements.txt'
+
+      - name: Install dependencies
+        run: |
+          cd backend
+          pip install -r requirements.txt
+          pip install pytest pytest-cov pytest-asyncio pytest-mock
+
+      - name: Run pre-commit hooks
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files
+
+      - name: Run unit tests
+        env:
+          DATABASE_URL: postgresql+asyncpg://test_user:test_password@localhost:5432/test_qrai  # pragma: allowlist secret
+          ENVIRONMENT: test
+        run: |
+          cd backend
+          echo "🧪 ユニットテスト実行"
+          pytest tests/unit/ -v --tb=short --cov=. --cov-report=xml --cov-report=html
+          echo "✅ ユニットテスト完了"
+
+      - name: Run integration tests
+        env:
+          DATABASE_URL: postgresql+asyncpg://test_user:test_password@localhost:5432/test_qrai  # pragma: allowlist secret
+          ENVIRONMENT: test
+        run: |
+          cd backend
+          echo "🧪 統合テスト実行"
+          pytest tests/integration/ -v --tb=short
+          echo "✅ 統合テスト完了"
+
+      - name: Upload test reports
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: backend-test-reports
+          path: |
+            backend/htmlcov/
+            backend/coverage.xml
+          retention-days: 30
+
+  # Phase 4: Frontend 品質・ビルド
+  frontend-quality:
+    name: ⚛️ Frontend Quality & Build
+    runs-on: ubuntu-latest
+    needs: setup-validation
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'pnpm'
+          cache-dependency-path: 'frontend/pnpm-lock.yaml'
+
+      - name: Install pnpm
+        run: npm install -g pnpm
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          pnpm install --frozen-lockfile
+
+      - name: Run linting
+        run: |
+          cd frontend
+          echo "🔍 ESLint実行"
+          pnpm lint
+          echo "✅ ESLint完了"
+
+      - name: Run type checking
+        run: |
+          cd frontend
+          echo "🔍 TypeScript型チェック実行"
+          pnpm type-check
+          echo "✅ TypeScript型チェック完了"
+
+      - name: Run unit tests
+        run: |
+          cd frontend
+          echo "🧪 フロントエンドテスト実行"
+          pnpm test:unit
+          echo "✅ フロントエンドテスト完了"
+
+      - name: Build application
+        run: |
+          cd frontend
+          echo "🏗️ ビルド実行"
+          pnpm build
+          echo "✅ ビルド完了"
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: frontend/dist/
+          retention-days: 30
+
+  # Phase 5: Docker 統合テスト
+  docker-integration:
+    name: 🐳 Docker Integration Test
+    runs-on: ubuntu-latest
+    needs: [backend-quality, frontend-quality]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Test Docker Compose configuration
+        run: |
+          echo "🔍 Docker Compose設定検証"
+          docker compose -f docker-compose.yml config > /dev/null
+          docker compose -f docker-compose.test.yml config > /dev/null
+          echo "✅ Docker Compose設定検証完了"
+
+      - name: Run integration tests with Docker
+        run: |
+          echo "🧪 Docker統合テスト実行"
+          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit
+          echo "✅ Docker統合テスト完了"
+
+      - name: Cleanup Docker resources
+        if: always()
+        run: |
+          docker compose -f docker-compose.test.yml down -v --remove-orphans
+          docker system prune -f
+
+  # Phase 6: 品質ゲート
   quality-gate:
     name: 🚪 Quality Gate
     runs-on: ubuntu-latest
-    needs: [validate-structure, docker-validation, security-scan]
+    needs: [security-scan, backend-quality, frontend-quality, docker-integration]
     if: always()
+
     steps:
       - name: Check all jobs status
         run: |
-          echo "📊 Phase 0 品質ゲートチェック"
+          echo "📊 Phase 1.5 品質ゲートチェック"
 
           # 必須ジョブのステータス確認
-          if [[ "${{ needs.validate-structure.result }}" != "success" ]]; then
-            echo "❌ プロジェクト構造検証失敗"
-            exit 1
-          fi
-
-          if [[ "${{ needs.docker-validation.result }}" != "success" ]]; then
-            echo "❌ Docker設定検証失敗"
-            exit 1
-          fi
-
           if [[ "${{ needs.security-scan.result }}" != "success" ]]; then
             echo "❌ セキュリティスキャン失敗"
             exit 1
           fi
 
-          echo "✅ Phase 0 品質ゲート通過"
-          echo "🎯 Phase 1 開発準備完了"
+          if [[ "${{ needs.backend-quality.result }}" != "success" ]]; then
+            echo "❌ バックエンド品質チェック失敗"
+            exit 1
+          fi
+
+          if [[ "${{ needs.frontend-quality.result }}" != "success" ]]; then
+            echo "❌ フロントエンド品質チェック失敗"
+            exit 1
+          fi
+
+          if [[ "${{ needs.docker-integration.result }}" != "success" ]]; then
+            echo "❌ Docker統合テスト失敗"
+            exit 1
+          fi
+
+          echo "✅ Phase 1.5 品質ゲート通過"
+          echo "🎯 本番デプロイ準備完了"
+
+      - name: Generate summary report
+        run: |
+          echo "📋 Phase 1.5 CI/CD Summary"
+          echo "=========================="
+          echo "🛡️  セキュリティスキャン: ${{ needs.security-scan.result }}"
+          echo "🐍 バックエンド品質: ${{ needs.backend-quality.result }}"
+          echo "⚛️  フロントエンド品質: ${{ needs.frontend-quality.result }}"
+          echo "🐳 Docker統合テスト: ${{ needs.docker-integration.result }}"
+          echo "=========================="
+          echo "🎉 Phase 1.5 CI/CD Pipeline 完了"
