feat(env): Phase 1.5 環境設定ファイル整備 - .env管理改善・gitignore更新・サンプル設定完成

--- a/.env.sample
+++ b/.env.sample
@@ -1,57 +1,117 @@
-# ========================================
-# QRAI MVP API 環境変数設定
-# ========================================
+# =============================================================================
+# QRAI Application Environment Configuration Template
+# =============================================================================
+# このファイルをコピーして環境に応じた.envファイルを作成してください
+# 本番環境の設定は絶対にGitにコミットしないでください
 
-# === アプリケーション基本設定 ===
-QRAI_APP_NAME="QRAI MVP API"
-QRAI_VERSION="1.0.0"
-QRAI_DEBUG=true
+# -----------------------------------------------------------------------------
+# 🗄️ データベース設定
+# -----------------------------------------------------------------------------
+# 開発環境（PostgreSQL）
+DATABASE_URL=postgresql+asyncpg://user:XXXXXX@localhost:5432/XXXXXX  # pragma: allowlist secret
 
-# === データベース設定 ===
-# pragma: allowlist secret
-QRAI_DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/qrai_dev  # pragma: allowlist secret
+# テスト環境（一時SQLite）
+# DATABASE_URL=sqlite+aiosqlite:///./test_qrai.db
 
-# === LLM Provider設定 ===
-# OpenRouter (プライマリプロバイダー)
-QRAI_OPENROUTER_API_KEY=あなたのOpenRouterAPIキー  # pragma: allowlist secret
-QRAI_OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+# 本番環境（Azure PostgreSQL）
+# DATABASE_URL=postgresql+asyncpg://qrai_admin:CHANGE_ME@qrai-postgres.postgres.database.azure.com:5432/qrai_prod  # pragma: allowlist secret
 
-# Google AI Studio (フォールバックプロバイダー)
-QRAI_GOOGLE_AI_API_KEY=あなたのGoogleAIAPIキー  # pragma: allowlist secret
-QRAI_GOOGLE_AI_MODEL=gemini-pro
+# -----------------------------------------------------------------------------
+# 🤖 LLM API設定
+# -----------------------------------------------------------------------------
+# OpenRouter API（メイン）
+OPENROUTER_API_KEY=sk-or-v1-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
 
-# === Azure AI Search設定 (Phase 2以降) ===
-QRAI_AZURE_SEARCH_ENDPOINT=""
-QRAI_AZURE_SEARCH_KEY=""
-QRAI_AZURE_SEARCH_INDEX="qrai-index"
+# Google AI Studio API（バックアップ）
+GOOGLE_AI_API_KEY=AIzaSyxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
 
-# === レート制限設定 ===
-QRAI_RATE_LIMIT_REQUESTS=20
-QRAI_RATE_LIMIT_WINDOW=60
+# Azure OpenAI API（企業向け）
+AZURE_OPENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
+AZURE_OPENAI_ENDPOINT=https://qrai-openai.openai.azure.com/
+AZURE_OPENAI_API_VERSION=2024-05-01-preview
 
-# === CORS設定 ===
-QRAI_CORS_ORIGINS=http://localhost:3000,http://localhost:8000
+# -----------------------------------------------------------------------------
+# 🔍 Azure Search設定
+# -----------------------------------------------------------------------------
+AZURE_SEARCH_ENDPOINT=https://qrai-search.search.windows.net
+AZURE_SEARCH_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
+AZURE_SEARCH_INDEX_NAME=qrai-knowledge-base
 
-# === ログ設定 ===
-QRAI_LOG_LEVEL=DEBUG
+# -----------------------------------------------------------------------------
+# 🔐 Azure Key Vault設定
+# -----------------------------------------------------------------------------
+AZURE_KEYVAULT_URL=https://qrai-kv-dev.vault.azure.net/
+AZURE_CLIENT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
+AZURE_CLIENT_SECRET=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  # pragma: allowlist secret
+AZURE_TENANT_ID=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 
-# ========================================
-# 以下は現在未使用（将来用）
-# ========================================
+# -----------------------------------------------------------------------------
+# 📊 監視・ログ設定
+# -----------------------------------------------------------------------------
+# ログレベル: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO
 
-# === 開発環境設定（未使用） ===
-# ENV=development
-# LLM_PRIMARY_PROVIDER=openrouter
-# LLM_FALLBACK_PROVIDERS=google_ai
+# 環境識別: development, test, staging, production
+ENVIRONMENT=development
 
-# === Azure OpenAI（現在使用不可） ===
-# AZURE_OPENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-# AZURE_OPENAI_ENDPOINT=https://your-openai.openai.azure.com
+# Application Insights接続文字列
+AZURE_APPLICATION_INSIGHTS_CONNECTION_STRING=InstrumentationKey=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 
-# === Redis設定（未実装） ===
-# REDIS_URL=redis://localhost:6379
+# -----------------------------------------------------------------------------
+# 🌐 アプリケーション設定
+# -----------------------------------------------------------------------------
+# アプリケーション名
+APP_NAME=QRAI
+APP_VERSION=1.5.0
 
-# === Azure設定（デプロイ後に設定） ===
-# AZURE_RESOURCE_GROUP=qrai-rg-dev
-# AZURE_LOCATION=japaneast
-# AZURE_KEYVAULT_NAME=デプロイ後に設定
+# CORS設定
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+
+# JWT設定
+JWT_SECRET_KEY=your-super-secret-jwt-key-change-this-in-production  # pragma: allowlist secret
+JWT_ALGORITHM=HS256
+JWT_EXPIRE_MINUTES=60
+
+# セッション設定
+SESSION_SECRET_KEY=your-super-secret-session-key-change-this-in-production  # pragma: allowlist secret
+
+# -----------------------------------------------------------------------------
+# 🐳 開発環境設定
+# -----------------------------------------------------------------------------
+# 開発サーバー設定
+HOST=0.0.0.0
+PORT=8000
+RELOAD=true
+
+# フロントエンド設定
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:8000
+
+# -----------------------------------------------------------------------------
+# 🔧 デバッグ・開発ツール
+# -----------------------------------------------------------------------------
+# デバッグモード
+DEBUG=false
+
+# SQLデバッグ（SQL文出力）
+SQL_DEBUG=false
+
+# プロファイリング有効化
+ENABLE_PROFILING=false
+
+# -----------------------------------------------------------------------------
+# 📈 パフォーマンス設定
+# -----------------------------------------------------------------------------
+# データベース接続プール
+DB_POOL_SIZE=10
+DB_MAX_OVERFLOW=30
+DB_POOL_TIMEOUT=30
+
+# LLM API設定
+LLM_REQUEST_TIMEOUT=60
+LLM_MAX_RETRIES=3
+LLM_RATE_LIMIT_PER_MINUTE=60
+
+# キャッシュ設定
+CACHE_TTL_SECONDS=3600
+CACHE_MAX_SIZE=1000
