feat(keyvault-logging): Phase 1.5D3-D4実装完了

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,10 @@ pydantic-settings~=2.1.0
 # Logging
 structlog~=23.2.0
 
+# Azure services
+azure-keyvault-secrets~=4.7.0
+azure-identity~=1.15.0
+
 # Testing (development)
 pytest~=7.4.3
 pytest-cov~=4.1.0
